fix(api-tenant): fix sonar issues